# Blog-project

./: pyproject.toml
backend/app/: config.py
