[project]
name = "blog-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Git-User-Vinay",email = "vinaykumarkambapuram@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "pymongo (>=4.9,<5.0)",
    "motor (>=3.6.1,<4.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
